--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,129 @@
-body {
+
+
+html{
+  font-size:62.5% ;/* 16px x 62.5=10px=1rem*/
+  box-sizing:border-box; 
+}
+
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  height: 100vh;
+  font-size:1.6rem;
+  font-family:Helvetica,Arial,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+#root{
+  height: 100%;
+  
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*Layout*/
+
+.grid-container{
+display: grid;
+grid-template-areas: 'header' 'main' 'footer';
+grid-template-columns: 1 fr; /*only one column no side colums*/
+grid-template-rows: 5rem 1fr 5rem;
+height:100%;
+
+}
+
+header{
+  grid-area:header;
+  background-color: #203040;
+
+}
+
+main{
+  grid-area:main;
+  padding: 1rem;
+}
+
+footer{
+  grid-area:footer;
+  background-color: #203040;
+  color:#ffffff;
+}
+/*Commmon*/
+h1{
+  font-size:1.8rem;
+  padding:1rem 0;
+
+}
+a{
+  text-decoration: none;
+}
+a:hover{
+  color: #ff8000;
+}
+/*Header*/
+header a{/*all the links in header-decendent selector */
+  color: white;
+  padding: 1rem;
+}
+
+
+a.brand{
+  color: white;
+  font-size:3rem;
+  font-weight:bold
+}
+
+.row{
+  display: flex; /*items next to each other */
+  flex-wrap: wrap;/*if there is not enough space move to next*/
+  justify-content: space-between;/* create maximum space between items*/
+  align-items: center;
+}
+
+.row.center{/*row kiyla calss ekakui center kiyla class ekakui tiynwanm */
+  justify-content: center;
+}
+
+/*image*/
+img {
+  border-radius: 0.5rem;
+}
+img.small {
+  max-width: 5rem;
+  width: 100%;
+}
+img.medium {
+  max-width: 29rem;
+  width: 100%;
+}
+img.large {
+  width: 100%;
+}
+/* Card */
+.card{
+  border:0.1rem #c0c0c0 solid;
+  background-color: #f8f8f8;
+  border-radius: 0.5rem;
+  margin: 1rem;
+}
+
+
+.card-body{
+  padding: 1rem;
+}
+
+.card-body{
+  margin-bottom:0.5rem;/*5px*/
+}
+
+.price
+{
+  font-size: 2rem;
+}
+
+/*Rating*/
+.rating span{
+  color:#f0c040;
+  margin: 0.1rem;
+}
+
+.rating span:last-child{
+  color: #404040;
 }
