added route to each item

--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,38 @@ a{
 a:hover{
   color: #ff8000;
 }
+
+ul{
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+li{
+  margin-top: 1rem;
+}
+button:hover{
+  border: 0.1rem #404040 solid;
+}
+
+button{
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border:0.1rem #a4a4a4 solid;
+  font-size:1.6rem;
+  font-family:Helvetica,Arial,sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color:#f8f8f8 ;
+  cursor: pointer;/*cursor eka pointer ekak wenwa*/
+}
+button.primary{
+  background-color: #f0c040;
+}
+
+button.block{
+  width:100%;
+}
+
 /*Header*/
 header a{/*all the links in header-decendent selector */
   color: white;
@@ -80,6 +112,22 @@ a.brand{
 .row.center{/*row kiyla calss ekakui center kiyla class ekakui tiynwanm */
   justify-content: center;
 }
+
+.row.top{
+  align-items: flex-start;
+}
+
+.col-1{
+  flex: 1 1 25rem;/*flex: flex-grow flex-shrink flex-basis|auto|initial|inherit;
+flex-grow  -	A number specifying how much the item will grow relative to the rest of the flexible items
+flex-shrink-	A number specifying how much the item will shrink relative to the rest of the flexible items
+flex-basis -	The length of the item. Legal values: "auto", "inherit", or a number followed by "%", "px", "em" or*/
+}
+
+.col-2{
+  flex: 2 1 50rem;
+}
+
 
 /*image*/
 img {
@@ -126,4 +174,13 @@ img.large {
 
 .rating span:last-child{
   color: #404040;
+}
+
+/*Alert*/
+.success{
+  color: #20a020;
+}
+
+.error{
+  color: #a02020;
 }
