--- a/src/index.css
+++ b/src/index.css
@@ -188,7 +188,7 @@ img.large {
 .alert{
   padding:1rem;
   border:0.1rem solid transparent;
-  border:0.5rem;
+  border-radius:0.5rem;
 }
 
 .alert-info{
