--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,16 @@ a.brand{
   font-weight:bold
 }
 
+.badge{
+  background-color: #f02020;
+  color:#ffffff ;
+  border-radius: 50%;
+  padding:0.2rem 0.7rem ;
+  font-size: 1.4rem;
+  margin-left:0.2rem;
+}
+
+
 .row{
   display: flex; /*items next to each other */
   flex-wrap: wrap;/*if there is not enough space move to next*/
